<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity">

    <TextView
        android:id="@+id/textViewCrearUnaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/CreateAnAcount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCrearUnaCuenta">

        <EditText
            android:id="@+id/editTextNombreRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/BussinesName"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <EditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <EditText
            android:id="@+id/editTextPhoneRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/PhoneNumber"
            android:inputType="phone"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp" />

        <Button
            android:id="@+id/buttonSignUpRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:hint="@string/signUp"
            android:onClick="Registrar"
            android:text="@string/signUp"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>