<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsRegistroPuntosActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            tools:context=".MapsRegistroPuntosActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPointName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PointName" />

            <EditText
                android:id="@+id/editTextNombrePunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTags"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PointTags" />

            <EditText
                android:id="@+id/editTextTagsPunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCiudad"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city" />

            <EditText
                android:id="@+id/editTextCiudadPunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />


        </LinearLayout>


        <TextView
            android:id="@+id/textViewFechaTermina"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/FinishDate" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Day" />

                <EditText
                    android:id="@+id/editTextNumberDiaRegistroPunto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Month" />

                <EditText
                    android:id="@+id/editTextNumberMesRegistroPunto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAnio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Year" />

                <EditText
                    android:id="@+id/editTextAnioRegistroPunto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonRegistrarPuntoMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/save"
            android:onClick="GuardarPunto"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
