<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="238dp"
        android:layout_height="278dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotravelersbussines" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName">

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <EditText
            android:id="@+id/editTextPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:onClick="signIn"
            android:text="@string/signIn"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp" />

        <Button
            android:id="@+id/Registrarsebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:onClick="signUp"
            android:text="@string/signUp"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>